# _project_template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOVER.md  LESSONS.md  Makefile  PLAN.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  rules.md  user_manual.md
.claude/: ritual-report.py  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: README.md  auditor.md  researcher.md  verifier.md
.claude/hooks/: block-dangerous.sh  compact-gate.sh  handoff-reminder.sh  handover-reminder.sh  hooks.json  owner-guard.sh  plan-phase-nudge.sh  pre-compact-snapshot.sh  ritual-log.sh  session-start-reground.sh
.claude/rules/: README.md  migrations-append-only.md
.claude/skills/adopt/: SKILL.md
.claude/skills/audit/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
config/: README.md  local.yaml  prod.yaml
docs/: architecture.md  handover-archive.md  layouts.md  security.md  steering.md  user_manual.md
docs/adr/: 0000-adr-template.md  README.md
docs/assets/: gen_architecture_svg.py
prompts/: README.md
reports/: README.md
requirements/: README.md  base.txt  dev.txt
research/: README.md
research/articles/: findings.md
research/github/: findings.md
research/web/: findings.md
scratch/: README.md
scratch/experiments/: .gitkeep
scratch/one_off/: .gitkeep
scratch/probes/: .gitkeep
tests/: README.md
tests/e2e/: .gitkeep
tests/integration/: .gitkeep
tests/unit/: .gitkeep
(+14 files in other folders)
